fixed placeholder color was too light

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,7 @@ app-table {
 .poi-info-window .title {
   color: black !important;
 }
+
+::placeholder {
+  color: #999 !important;
+}
